# skills

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.beads/: .migration-hint-ts  PRIME.md  issues.jsonl  metadata.json
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: audit-skill.md  audit-slash-command.md  audit-subagent.md  catchup.md  heal-skill.md  run-plan.md
.claude/plans/: gtd-beads-backend-k7m3a-plan.md
.claude/skills/: crawl4ai  github  recipes
.github/workflows/: ci.yml
.layton/: config.json
.layton/skills/: gtd.md
.planning/: current-plan.md  layton.md
001-pai-orchestrator/: data-model.md  plan.md  quickstart.md  research.md  skill-discovery.md  spec.md  user-stories.md
001-pai-orchestrator/contracts/: cli-contract.md
_archive/the-day/: SKILL.md
agents/: code-map-explorer.md
commands/: catchup.md  commit.md  jira.md  pr.md  research.md
openspec/: AGENTS.md
recipes/: agentic-cli.md  claude_tools.md  comments.md  extract-deterministic.md  keyring-credential-storage.md  python-project-architecture.md  safe-by-default-cli.md  semantic-zoom.md  skill-configuration.md  snapshot-testing.md  writing-skills.md
skills/b4brain/: SKILL.md
skills/code-map/: SKILL.md
skills/code-mapping/: README.md  SKILL.md
skills/crawl4ai/: SKILL.md
skills/github/: SKILL.md
skills/gtd/: DESIGN.md  SKILL.md  TODO.md
skills/jira/: SKILL.md
skills/layton/: SKILL.md  (+1 more)
tests/: conftest.py
(+337 files in other folders)
